--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "next": "14.2.10",
+    "next": "15.1.0",
     "react": "^18",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
