--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-quill-new": "^3.3.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
