update some back and front

--- a/back/.env
+++ b/back/.env
@@ -1,5 +1,5 @@
-DB_USER=news_user
-DB_HOST=db
-DB_DATABASE_NAME=news_db
-DB_PASSWORD=news_pw
+DB_USER=rebirth_talk_user
+DB_HOST=rebirth_talk_db
+DB_DATABASE_NAME=rebirth_talk_db
+DB_PASSWORD=rebirth_talk_pw
 REDIS_PASSWORD=J5EGHdss54rtghjgfEWSDbvtr
