--- a/back/package.json
+++ b/back/package.json
@@ -11,13 +11,13 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "db:generate": "docker exec -it news_backend sh -c \"npx drizzle-kit generate\"",
-    "db:generate-name": "docker exec -it news_backend sh -c \"npx drizzle-kit generate --name $npm_config_name\"",
-    "db:migrate": "docker exec -it news_backend sh -c \" npx drizzle-kit migrate\"",
-    "db:seed": "docker exec -it news_backend sh -c \" node src/database/seeders/index.js \"",
-    "db:seed-category": "docker exec -it news_backend sh -c \" node src/database/seeders/category-seeder.js \"",
-    "db:seed-proxy": "docker exec -it news_backend sh -c \" node src/database/seeders/proxy-seeder.js \"",
-    "db:migrate-undo": "docker exec -it news_backend sh -c \" npx drizzle-kit drop\"",
+    "db:generate": "docker exec -it rebirth_talk_backend sh -c \"npx drizzle-kit generate\"",
+    "db:generate-name": "docker exec -it rebirth_talk_backend sh -c \"npx drizzle-kit generate --name $npm_config_name\"",
+    "db:migrate": "docker exec -it rebirth_talk_backend sh -c \" npx drizzle-kit migrate\"",
+    "db:seed": "docker exec -it rebirth_talk_backend sh -c \" node src/database/seeders/index.js \"",
+    "db:seed-category": "docker exec -it rebirth_talk_backend sh -c \" node src/database/seeders/category-seeder.js \"",
+    "db:seed-proxy": "docker exec -it rebirth_talk_backend sh -c \" node src/database/seeders/proxy-seeder.js \"",
+    "db:migrate-undo": "docker exec -it rebirth_talk_backend sh -c \" npx drizzle-kit drop\"",
     "dev": "node --watch ."
   },
   "keywords": [],
