--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.4",
+    "@apollo/experimental-nextjs-app-support": "^0.11.7",
     "@hookform/resolvers": "^3.9.1",
+    "classnames": "^2.5.1",
     "next": "15.1.0",
     "react": "^18",
     "react-calendar": "^5.1.0",
