--- a/front/package.json
+++ b/front/package.json
@@ -12,20 +12,22 @@
     "@apollo/client": "^3.12.4",
     "@apollo/experimental-nextjs-app-support": "^0.11.7",
     "@hookform/resolvers": "^3.9.1",
+    "@react-oauth/google": "^0.12.1",
     "classnames": "^2.5.1",
-    "next": "15.1.0",
-    "react": "^18",
+    "next": "15.1.3",
+    "react": "19.0.0",
     "react-calendar": "^5.1.0",
-    "react-dom": "^18",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.3.0",
     "react-quill-new": "^3.3.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
