--- a/back/.env
+++ b/back/.env
@@ -3,3 +3,5 @@ DB_HOST=rebirth_talk_db
 DB_DATABASE_NAME=rebirth_talk_db
 DB_PASSWORD=rebirth_talk_pw
 REDIS_PASSWORD=J5EGHdss54rtghjgfEWSDbvtr
+CLIENT_ID_GOOGLE=213276989482-65lkr0r82irquckrr22ojjitv9n80cee.apps.googleusercontent.com
+JWT_SECRET=sdfndfgjn4reafsfxshdgsrs
