--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@apollo/client": "^3.12.4",
     "@apollo/experimental-nextjs-app-support": "^0.11.7",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.9.1",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
     "@react-oauth/google": "^0.12.1",
     "classnames": "^2.5.1",
     "next": "15.1.3",
