--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^6.3.1",
     "@react-oauth/google": "^0.12.1",
     "classnames": "^2.5.1",
+    "framer-motion": "^11.16.0",
     "next": "15.1.3",
     "react": "19.0.0",
     "react-calendar": "^5.1.0",
