--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@react-oauth/google": "^0.12.1",
+    "boring-avatars": "^1.11.2",
     "classnames": "^2.5.1",
     "framer-motion": "^11.16.0",
     "next": "15.1.3",
