--- a/front/package.json
+++ b/front/package.json
@@ -17,10 +17,12 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@react-oauth/google": "^0.12.1",
+    "@types/quill": "^2.0.14",
     "boring-avatars": "^1.11.2",
     "classnames": "^2.5.1",
     "framer-motion": "^11.16.0",
     "next": "15.1.3",
+    "quill": "^2.0.3",
     "react": "19.0.0",
     "react-calendar": "^5.1.0",
     "react-dom": "19.0.0",
