--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "boring-avatars": "^1.11.2",
     "classnames": "^2.5.1",
     "framer-motion": "^11.16.0",
+    "js-cookie": "^3.0.5",
     "next": "15.1.3",
     "quill": "^2.0.3",
     "react": "19.0.0",
