--- a/front/package.json
+++ b/front/package.json
@@ -31,7 +31,8 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.3.0",
     "react-quill-new": "^3.3.3",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
