--- a/front/package.json
+++ b/front/package.json
@@ -22,7 +22,7 @@
     "classnames": "^2.5.1",
     "framer-motion": "^11.16.0",
     "js-cookie": "^3.0.5",
-    "next": "15.1.3",
+    "next": "^15.1.6",
     "quill": "^2.0.3",
     "react": "19.0.0",
     "react-calendar": "^5.1.0",
